[tool.poetry]
name = "notebook"
version = "0.1.0"
description = "my sample notebook"
authors = ["jpishikawa"]

[tool.poetry.dependencies]
python = "^3.9"
elyra = "^3.11.0"
mlflow = "^1.28.0"
numpy = "^1.23.2"
scikit-learn = "^1.1.2"
matplotlib = "^3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
